@@ -15,12 +15,14 @@ import sirius.kernel.Sirius;
 import sirius.kernel.cache.Cache;
 import sirius.kernel.cache.CacheManager;
 import sirius.kernel.commons.Explain;
+import sirius.kernel.commons.Strings;
 import sirius.kernel.commons.Value;
 import sirius.kernel.commons.Values;
 import sirius.kernel.di.std.Part;
 import sirius.kernel.di.std.Register;
 import sirius.kernel.health.Average;
 import sirius.kernel.health.Log;
+import sirius.kernel.health.metrics.Metric;
 import sirius.kernel.health.metrics.MetricProvider;
 import sirius.kernel.health.metrics.MetricsCollector;
 
@@ -35,7 +37,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 /**
  * Provides a facility to connect to one or more <a href="https://github.com/scireum/jupiter">Jupiter</a> instances.
@@ -94,7 +95,10 @@ public class Jupiter implements MetricProvider {
      */
     public JupiterConnector getDefault() {
         if (defaultConnection == null) {
-            defaultConnection = getConnector(DEFAULT_NAME);
+            defaultConnection = new JupiterConnector(this,
+                                                     DEFAULT_NAME,
+                                                     redis.getPool(DEFAULT_NAME),
+                                                     fallbackPools.computeIfAbsent(DEFAULT_NAME, this::fetchFallbackPool));
         }
 
         return defaultConnection;
@@ -103,10 +107,15 @@ public class Jupiter implements MetricProvider {
     /**
      * Provides a connector to the instance with the given name.
      *
-     * @param name the name of the connector to connect to.
+     * @param name the name of the connector to connect to. If an empty name is given, the default connector is
+     *             returned.
      * @return the connector to the instance with the given name
      */
-    public JupiterConnector getConnector(String name) {
+    public JupiterConnector getConnector(@Nullable String name) {
+        if (Strings.isEmpty(name) || DEFAULT_NAME.equals(name)) {
+            return getDefault();
+        }
+
         return new JupiterConnector(this,
                                     name,
                                     redis.getPool(name),
@@ -167,11 +176,11 @@ public class Jupiter implements MetricProvider {
      * @return the transformed object (where all inner objects are also transformed).
      */
     public static Object read(Object obj) {
-        if (obj instanceof byte[]) {
-            return SafeEncoder.encode((byte[]) obj);
+        if (obj instanceof byte[] byteArray) {
+            return SafeEncoder.encode(byteArray);
         }
         if (obj instanceof List) {
-            return ((List<?>) obj).stream().map(Jupiter::read).collect(Collectors.toList());
+            return ((List<?>) obj).stream().map(Jupiter::read).toList();
         }
 
         return obj;
@@ -179,12 +188,24 @@ public class Jupiter implements MetricProvider {
 
     @Override
     public void gather(MetricsCollector metricsCollector) {
-        metricsCollector.metric("jupiter_calls", "jupiter-calls", "Jupiter Calls", callDuration.getCount(), "/min");
+        if (getDefault().isConfigured()) {
+            metricsCollector.metric("jupiter_fallback",
+                                    "jupiter-fallback",
+                                    "Jupiter Fallback",
+                                    getDefault().isFallbackActive() ? 1 : 0,
+                                    null);
+        }
+
+        metricsCollector.metric("jupiter_calls",
+                                "jupiter-calls",
+                                "Jupiter Calls",
+                                callDuration.getCount(),
+                                Metric.UNIT_PER_MIN);
         metricsCollector.metric("jupiter_call_duration",
                                 "jupiter-call-duration",
                                 "Jupiter Call Duration",
                                 callDuration.getAndClear(),
-                                "ms");
+                                Metric.UNIT_MS);
     }
 
     /**
@@ -211,7 +232,7 @@ public class Jupiter implements MetricProvider {
      * This is a smaller cache for (relatively) large/complex compound objects.
      * <p>
      * Note that the underlying cache is automatically cleared once the Jupiter repository is synced, so that
-     * this cache shoudln't contain any stale data.
+     * this cache shouldn't contain any stale data.
      *
      * @param key           the globally unique key used to locally lookup the value
      * @param valueComputer the computer which actually uses Jupiter (e.g. IDB) to compute the cachable data.
