@@ -11,6 +11,7 @@ package sirius.biz.tenants;
 import com.typesafe.config.Config;
 import sirius.biz.analytics.events.EventRecorder;
 import sirius.biz.analytics.events.UserActivityEvent;
+import sirius.biz.analytics.flags.PerformanceFlag;
 import sirius.biz.model.LoginData;
 import sirius.biz.protocol.AuditLog;
 import sirius.biz.web.SpyUser;
@@ -56,7 +57,6 @@ import java.util.Set;
 import java.util.TreeSet;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 /**
  * Provides a {@link UserManager} for {@link Tenant} and {@link UserAccount}.
@@ -152,6 +152,21 @@ public abstract class TenantUserManager<I extends Serializable, T extends BaseEn
      * @see LoginData#FINGERPRINT
      */
     private static final String SUFFIX_FINGERPRINT = "-fingerprint";
+
+    /**
+     * Contains the prefix added to the account number which is added as artificial role.
+     * <p>
+     * Therefore, each user of a tenant has the following additional role (if filled):
+     * {@code ROLE_PREFIX_ACCOUNT_NUMBER + tenant.getTenantData().getAccountNumber()}
+     */
+    public static final String ROLE_PREFIX_ACCOUNT_NUMBER = "tenant-";
+
+    /**
+     * Contains the prefix added to all performance flags when they're made visible as roles.
+     * <p>
+     * This simplifies checking if a user or its tenant has a certain flag active.
+     */
+    public static final String ROLE_PREFIX_PERFORMANCE_FLAG = "performance-flag-";
 
     protected final String systemTenant;
     protected final boolean acceptApiTokens;
@@ -353,7 +368,9 @@ public abstract class TenantUserManager<I extends Serializable, T extends BaseEn
             U currentUser = originalUser.getUserObject(getUserClass());
             U modifiedUser = getUserClass().getDeclaredConstructor().newInstance();
             modifiedUser.setId(currentUser.getId());
-            modifiedUser.getUserAccountData().getLang().setValue(currentUser.getUserAccountData().getLang().getValue());
+            modifiedUser.getUserAccountData()
+                        .getLanguage()
+                        .setValue(currentUser.getUserAccountData().getLanguage().getValue());
             modifiedUser.getUserAccountData()
                         .getLogin()
                         .setUsername(currentUser.getUserAccountData().getLogin().getUsername());
@@ -365,6 +382,10 @@ public abstract class TenantUserManager<I extends Serializable, T extends BaseEn
                         .getPermissions()
                         .getPermissions()
                         .addAll(currentUser.getUserAccountData().getPermissions().getPermissions().modify());
+            modifiedUser.getUserAccountData()
+                        .getPerson()
+                        .getSalutation()
+                        .setValue(currentUser.getUserAccountData().getPerson().getSalutation().getValue());
             modifiedUser.getUserAccountData()
                         .getPerson()
                         .setFirstname(currentUser.getUserAccountData().getPerson().getFirstname());
@@ -601,7 +622,7 @@ public abstract class TenantUserManager<I extends Serializable, T extends BaseEn
                                .withUsername(account.getUserAccountData().getLogin().getUsername())
                                .withTenantId(String.valueOf(account.getTenant().getId()))
                                .withTenantName(account.getTenant().fetchValue().getTenantData().getName())
-                               .withLang(computeLang(null, account.getUniqueName()))
+                               .withLanguage(computeLanguage(null, account.getUniqueName()))
                                .withPermissions(roles)
                                .withSettingsSupplier(user -> getUserSettings(getScopeSettings(), user))
                                .withUserSupplier(ignored -> account)
@@ -628,7 +649,7 @@ public abstract class TenantUserManager<I extends Serializable, T extends BaseEn
 
         UserInfo result = findUserByName(ctx, user);
         if (result == null) {
-            auditLog.negative("AuditLog.lockedOrNonexitentUserTriedLogin").forUser(null, user).log();
+            auditLog.negative("AuditLog.lockedOrNonexistentUserTriedLogin").forUser(null, user).log();
             return null;
         }
 
@@ -685,7 +706,7 @@ public abstract class TenantUserManager<I extends Serializable, T extends BaseEn
         }
 
         long currentTimestampInDays = TimeUnit.MILLISECONDS.toDays(System.currentTimeMillis());
-        // Timestamps of tomorrow and yesterday should be valid too, to be more gracefull with nightly scripts utilizing
+        // Timestamps of tomorrow and yesterday should be valid too, to be more graceful with nightly scripts utilizing
         // the apiToken. If midnight passes while execution, the hashed apiToken would be suddenly invalid.
         for (int i = -1; i <= 1; i++) {
             long timestampToCheck = currentTimestampInDays + i;
@@ -893,7 +914,7 @@ public abstract class TenantUserManager<I extends Serializable, T extends BaseEn
             roles.add(Tenant.PERMISSION_SYSTEM_TENANT);
         }
         if (Strings.isFilled(tenant.getTenantData().getAccountNumber())) {
-            roles.add("tenant-" + tenant.getTenantData().getAccountNumber());
+            roles.add(ROLE_PREFIX_ACCOUNT_NUMBER + tenant.getTenantData().getAccountNumber());
         }
 
         for (AdditionalRolesProvider rolesProvider : additionalRolesProviders) {
@@ -903,6 +924,12 @@ public abstract class TenantUserManager<I extends Serializable, T extends BaseEn
         if (tenant.getMapper().select(tenant.getClass()).eq(Tenant.PARENT, tenant.getIdAsString()).exists()) {
             roles.add(PERMISSION_HAS_CHILDREN);
         }
+
+        tenant.getPerformanceData()
+              .activeFlags()
+              .map(PerformanceFlag::getName)
+              .map(flag -> ROLE_PREFIX_PERFORMANCE_FLAG + flag)
+              .forEach(roles::add);
 
         Set<String> transformedRoles = transformRoles(roles);
         tenant.getTenantData().getPackageData().getRevokedPermissions().data().forEach(transformedRoles::remove);
@@ -985,7 +1012,7 @@ public abstract class TenantUserManager<I extends Serializable, T extends BaseEn
      * @return the list of supported languages
      */
     public List<String> getAvailableLanguageCodes() {
-        return Collections.unmodifiableList(availableLanguages);
+        return availableLanguages;
     }
 
     /**
@@ -994,9 +1021,7 @@ public abstract class TenantUserManager<I extends Serializable, T extends BaseEn
      * @return a list of tuples containing the ISO code and the translated name
      */
     public List<Tuple<String, String>> getAvailableLanguages() {
-        return availableLanguages.stream()
-                                 .map(code -> Tuple.create(code, NLS.get("Language." + code)))
-                                 .collect(Collectors.toList());
+        return availableLanguages.stream().map(code -> Tuple.create(code, NLS.get("Language." + code))).toList();
     }
 
     @Override
@@ -1009,7 +1034,7 @@ public abstract class TenantUserManager<I extends Serializable, T extends BaseEn
     /**
      * Returns the id of the system tenant.
      * <p>
-     * Note that this method should only be used by the framework itself. Otherwise use
+     * Note that this method should only be used by the framework itself. Otherwise, use
      * {@link UserInfo#hasPermission(String)} or {@link Tenant#hasPermission(String)} and
      * {@link #PERMISSION_SYSTEM_ADMINISTRATOR} or {@link #PERMISSION_SYSTEM_TENANT_MEMBER}.
      *
@@ -1021,13 +1046,13 @@ public abstract class TenantUserManager<I extends Serializable, T extends BaseEn
 
     @Nonnull
     @Override
-    protected String computeLang(WebContext ctx, String userId) {
+    protected String computeLanguage(WebContext webContext, String userId) {
         U userAccount = fetchAccount(userId);
         if (userAccount == null) {
             return NLS.getDefaultLanguage();
         }
-        return Strings.firstFilled(userAccount.getUserAccountData().getLang().getValue(),
-                                   userAccount.getTenant().fetchValue().getTenantData().getLang().getValue(),
+        return Strings.firstFilled(userAccount.getUserAccountData().getLanguage().getValue(),
+                                   userAccount.getTenant().fetchValue().getTenantData().getLanguage().getValue(),
                                    NLS.getDefaultLanguage());
     }
 }
